--- a/PollyRetry.ConsoleApp/PollyRetry.ConsoleApp.csproj
+++ b/PollyRetry.ConsoleApp/PollyRetry.ConsoleApp.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Polly" Version="7.1.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+  </ItemGroup>
+
 </Project>
